# protocharge

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml
configs/: README.md  global_buckets_hist.yaml  global_buckets_prn.yaml  manifest_hist.yaml  manifest_prn.yaml
docs/: getting-started.md  index.md  modules.md  slurm-quickstart.md  symmetry.md  workflow.md
extra/: parmed_PRN.py
getting-started/: index.html
modules/: index.html
notebooks/: amber-dyes-FIGURE-3-RAW-ESP.ipynb  amber-dyes-FIGURE-3-RESP.ipynb  charge-comparison-histidine-plot.ipynb  diagnose-mc-noconvergene.ipynb  experimental_symmetry.ipynb  free-energy-landscape-protein.ipynb  histidine.ipynb  inspect_resp_failures.ipynb  macro-experimental-titration-curves.ipynb  parity_figure.ipynb  rawESPdistributions.ipynb  raw_ESP_histograms.ipynb  tails.ipynb  twostepRESP.ipynb
scripts/: bootstrap_hist.py  bootstrap_hist_random.py  compare_charges.py  compute_symmetry_buckets.py  generate_raw_esp_matrix.py  generate_raw_esp_matrix_2.py  generate_raw_esp_matrix_3.py  generate_resp_charges_matrix.py  generate_twostep_resp.py  generate_twostep_resp_frozen_buckets.py  generate_twostep_resp_group_constraints.py  generate_twostep_resp_masked_total.py  mmresp_hist.slurm  mmresp_prn.slurm  print_dipoles.py  retry_twostep_resp.py  run_bootstrap_hist.slurm  run_bootstrap_random_ll.slurm  run_bootstrap_random_syc.slurm  run_multiconfresp.slurm
search/: search_index.json
slurm-quickstart/: index.html
symmetry/: index.html
tests/: conftest.py  test_constants.py  (+18 more)
(+160 files in other folders)
